--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ nav:
 theme:
     name: material
     locale: fr
-    logo  : assets/logo.png
+    logo  : assets\logo.png
     palette :
         scheme : slate
         primary : blue grey
