--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,11 @@ extra_css :
   
 markdown_extensions:
   - pymdownx.highlight
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
+  - pymdownx.smartsymbols
+  - pymdownx.critic
   - pymdownx.superfences
   - pymdownx.keys
   - pymdownx.arithmatex:
