Ajout Work In Progress

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,21 +7,25 @@ nav:
         - 'Seconde' : 'Maths\Seconde\home.md'
         - 'Première' : 'Maths\Premiere\home.md'
         - 'Terminale' : 'Maths\Terminale\home.md'
-    - 'SNT' : 'snt_home.md'
+    - 'SNT' : 'WorkInProgress.md'
     - 'NSI' :
         - 'Première' : 'NSI\Premiere\home.md'
-        - 'Terminale' : 'NSI\Terminale\home.md'
+        - 'Terminale' : 
+            - 'Présentation' : 'NSI\Terminale\home.md'
+            - 'Modularité et POO' : 'NSI\Terminale\C01\Intro.md'
+           
     - 'Miscellanées' :
         - 'Python' :
-            - 'Le langage' 
-            - 'Flask' 
+            - 'Le langage' : 'WorkInProgress.md'
+            - 'Flask' : 'WorkInProgress.md'
             - 'MkDocs' : 'Miscellanees\mkdocs_cmd.md'
-            - 'Manim' 
+            - 'Manim' : 'WorkInProgress.md'
 
  
 plugins : 
     - search
     - macros
+    - section-index
     
 theme:
     name: material
