--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,11 @@ nav:
         - 'Première' : 'NSI\Premiere\home.md'
         - 'Terminale' : 
             - 'Présentation' : 'NSI\Terminale\home.md'
-            - 'Modularité et POO' : 'NSI\Terminale\C01\Intro.md'
+            - 'Modularité et POO' :
+                - 'Introduction' : 'NSI\Terminale\C01\Intro.md'
+                - 'Modules, interfaces, encapsulation' : 'WorkInProgress.md'
+                - 'Exceptions' : 'WorkInProgress.md'
+                - 'POO' : 'WorkInProgress.md'
            
     - 'Miscellanées' :
         - 'Python' :
