--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material, mkdocs-macros-plugin, mkdocs-material-extensions? mkdocs-pdf-export-plugin, mkdocs-section-index
+      - run: pip install mkdocs-material mkdocs-macros-plugin mkdocs-material-extensions mkdocs-pdf-export-plugin mkdocs-section-index
       - run: mkdocs gh-deploy --force
