Ajout NSI/Tle/C01/partie 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
             - 'Présentation' : 'NSI\Terminale\home.md'
             - 'Modularité et POO' :
                 - 'Introduction' : 'NSI\Terminale\C01\Intro.md'
-                - 'Modules, interfaces, encapsulation' : 'WorkInProgress.md'
+                - 'Modules, interfaces, encapsulation' : 'NSI\Terminale\C01\Modularite.md'
                 - 'Exceptions' : 'WorkInProgress.md'
                 - 'POO' : 'WorkInProgress.md'
            
