Fix relative path for linux users

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,19 +5,19 @@ nav:
     - 'Home' : index.md
     - 'Mathématiques' :
         - 'Seconde' : 
-            - 'Présentation' : 'Maths\Seconde\home.md'
+            - 'Présentation' : 'Maths/Seconde/home.md'
             - 'Ensembles de nombres et intervalles' : 
-                - 'Ensembles de nombres ' : 'Maths\Seconde\C01\C01_01_Ensembles_Nombres.md'
+                - 'Ensembles de nombres ' : 'Maths/Seconde/C01/C01_01_Ensembles_Nombres.md'
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 'WorkInProgress.md'
     - 'SNT' : 'WorkInProgress.md'
     - 'NSI' :
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 
-            - 'Présentation' : 'NSI\Terminale\home.md'
+            - 'Présentation' : 'NSI/Terminale/home.md'
             - 'Modularité et POO' :
-                - 'Introduction' : 'NSI\Terminale\C01\Intro.md'
-                - 'Modules, interfaces, encapsulation' : 'NSI\Terminale\C01\Modularite.md'
+                - 'Introduction' : 'NSI/Terminale/C01/Intro.md'
+                - 'Modules, interfaces, encapsulation' : 'NSI/Terminale/C01/Modularite.md'
                 - 'Exceptions' : 'WorkInProgress.md'
                 - 'POO' : 'WorkInProgress.md'
            
@@ -25,7 +25,7 @@ nav:
         - 'Python' :
             - 'Le langage' : 'WorkInProgress.md'
             - 'Flask' : 'WorkInProgress.md'
-            - 'MkDocs' : 'Miscellanees\mkdocs_cmd.md'
+            - 'MkDocs' : 'Miscellanees/mkdocs_cmd.md'
             - 'Manim' : 'WorkInProgress.md'
 
  
@@ -89,4 +89,4 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
       options:
         custom_icons:
-          - assets\.icons\
+          - assets/.icons/
