Ajout Exceptions.md
NSI => Terminale > C01

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
             - 'Modularité et POO' :
                 - 'Introduction' : 'NSI/Terminale/C01/Intro.md'
                 - 'Modules, interfaces, encapsulation' : 'NSI/Terminale/C01/Modularite.md'
-                - 'Exceptions' : 'WorkInProgress.md'
+                - 'Exceptions' : 'NSI/Terminale/C01/Exceptions.md'
                 - 'POO' : 'WorkInProgress.md'
            
     - 'Miscellanées' :
