--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
                 - 'Introduction' : 'NSI/Terminale/C01/Intro.md'
                 - 'Modules, interfaces, encapsulation' : 'NSI/Terminale/C01/Modularite.md'
                 - 'Exceptions' : 'NSI/Terminale/C01/Exceptions.md'
-                - 'POO' : 'WorkInProgress.md'
+                - 'Introduction à la POO' : 'NSI/Terminale/C01/IntroPOO.md'
            
     - 'Miscellanées' :
         - 'Python' :
