Intro Pygame  + Corrections POO + build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,9 @@ nav:
             - 'Flask' : 'WorkInProgress.md'
             - 'MkDocs' : 'Miscellanees/mkdocs_cmd.md'
             - 'Manim' : 'WorkInProgress.md'
-
+            - 'Pygame' : 
+                - 'Installation' : 'Miscellanees/Pygame/InstallationPygame.md'
+                - 'Bases de Pygame' : 'Miscellanees/Pygame/Base_pygame.md'
  
 plugins : 
     - search
