--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
             - 'Présentation' : 'Maths/Seconde/home.md'
             - 'Ensembles de nombres et intervalles' : 
                 - 'Ensembles de nombres ' : 'Maths/Seconde/C01/C01_01_Ensembles_Nombres.md'
+                - 'Intervalles' : 'Maths/Seconde/C01/C01_02_Intervalles.md'
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 'WorkInProgress.md'
     - 'SNT' : 'WorkInProgress.md'
