--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ nav:
                 - 'Modules, interfaces, encapsulation' : 'NSI/Terminale/C01/Modularite.md'
                 - 'Exceptions' : 'NSI/Terminale/C01/Exceptions.md'
                 - 'Introduction à la POO' : 'NSI/Terminale/C01/IntroPOO.md'
+            - 'Récursivité' :
+                - 'Notion de récursivité' : 'NSI/Terminale/C02/Recursivite.md'
            
     - 'Miscellanées' :
         - 'Python' :
