Ajout Von Koch + build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,9 @@ nav:
                 - 'Introduction à la POO' : 'NSI/Terminale/C01/IntroPOO.md'
             - 'Récursivité' :
                 - 'Notion de récursivité' : 'NSI/Terminale/C02/Recursivite.md'
+                - 'Applications concrètes' : 'NSI/Terminale/C02/RecursiviteApplications.md'
+                - 'TP : Tours de Hanoï' : 'NSI/Terminale/C02/ToursHanoi.md'
+                
            
     - 'Miscellanées' :
         - 'Python' :
