--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,8 @@ nav:
                 - 'Introduction à la POO' : 'NSI/Terminale/C01/IntroPOO.md'
             - 'Récursivité' :
                 - 'Notion de récursivité' : 'NSI/Terminale/C02/Recursivite.md'
-                - 'Applications concrètes' : 'NSI/Terminale/C02/RecursiviteApplications.md'
+                - 'Applications : Fractales' : 'NSI/Terminale/C02/RecursiviteFractales.md'
+                - 'Applications : Tris' : 'NSI/Terminale/C02/RecursiviteTris.md'
                 - 'TP : Tours de Hanoï' : 'NSI/Terminale/C02/ToursHanoi.md'
                 
            
