--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,13 @@ nav:
         - 'Terminale' : 'WorkInProgress.md'
     - 'SNT' : 'WorkInProgress.md'
     - 'NSI' :
-        - 'Première' : 'WorkInProgress.md'
+        - 'Première' :
+            - 'Bases de Python' : 
+                - 'Variables et affectations' : 'WorkInProgress.md'
+                - 'Boucles et conditions' : 'WorkInProgress.md'
+                - 'Fonctions, assertions et tests unitaires' : 'WorkInProgress.md'
+                - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
+            
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
             - 'Modularité et POO' :
