--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ nav:
                 - 'Boucles et conditions' : 'WorkInProgress.md'
                 - 'Fonctions, assertions et tests unitaires' : 'WorkInProgress.md'
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
+            - 'Le codage des données' :
+                - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
             
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
