--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,8 +33,10 @@ nav:
                 - 'Notion de récursivité' : 'NSI/Terminale/C02/Recursivite.md'
                 - 'Applications : Fractales' : 'NSI/Terminale/C02/RecursiviteFractales.md'
                 - 'Applications : Tris' : 'NSI/Terminale/C02/RecursiviteTris.md'
-                - 'TP : Tours de Hanoï' : 'NSI/Terminale/C02/ToursHanoi.md'
                 
+            - 'Listes, Piles, Files' : 
+                - 'Listes chainées' :  'NSI/Terminale/C03/ListesChainees.md'
+                - 'TP : Tours de Hanoï' : 'NSI/Terminale/C03/ToursHanoi.md'
            
     - 'Miscellanées' :
         - 'Python' :
