Add Video Manim Tle

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,8 @@ nav:
             - 'Pygame' : 
                 - 'Installation' : 'Miscellanees/Pygame/InstallationPygame.md'
                 - 'Bases de Pygame' : 'Miscellanees/Pygame/Base_pygame.md'
- 
+        - 'Manim' :
+            - 'Bases de Manim' : 'Miscellanees/Manim/BasesManim.md'
 plugins : 
     - search
     - macros
