MAJ Video Tableaux Terminale

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,12 +43,11 @@ nav:
             - 'Le langage' : 'WorkInProgress.md'
             - 'Flask' : 'WorkInProgress.md'
             - 'MkDocs' : 'Miscellanees/mkdocs_cmd.md'
-            - 'Manim' : 'WorkInProgress.md'
+            - 'Manim' : 'Miscellanees/Manim/BasesManim.md'
             - 'Pygame' : 
                 - 'Installation' : 'Miscellanees/Pygame/InstallationPygame.md'
                 - 'Bases de Pygame' : 'Miscellanees/Pygame/Base_pygame.md'
-        - 'Manim' :
-            - 'Bases de Manim' : 'Miscellanees/Manim/BasesManim.md'
+        
 plugins : 
     - search
     - macros
