AP1 2de Python + Build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ nav:
             - 'Ensembles de nombres et intervalles' : 
                 - 'Ensembles de nombres ' : 'Maths/Seconde/C01/C01_01_Ensembles_Nombres.md'
                 - 'Intervalles' : 'Maths/Seconde/C01/C01_02_Intervalles.md'
+            - 'Algorithmique et bases de Python' :
+                - 'Algorithmes, affectations et types de variables' : 'Maths/Seconde/AlgoBases/AffectationTypes.md'
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 'WorkInProgress.md'
     - 'SNT' : 'WorkInProgress.md'
