Add Piles Files + MAJ listes Chainees

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
                 
             - 'Listes, Piles, Files' : 
                 - 'Listes chainées' :  'NSI/Terminale/C03/ListesChainees.md'
+                - 'Piles et files' : 'NSI/Terminale/C03/Piles_et_files.md'
                 - 'TP : Tours de Hanoï' : 'NSI/Terminale/C03/ToursHanoi.md'
            
     - 'Miscellanées' :
