Tests nombres + pdf pages + taille police

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,10 @@ plugins :
     - macros
     - section-index
     - mkdocs-video
+    - page-to-pdf 
+    - add-number :
+        strict_mode: False
+        order: 1
     
 theme:
     name: material
