--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,16 +57,10 @@ plugins :
     - section-index
     - mkdocs-video
     - page-to-pdf :
-        disableOnServe : False
-        margin : 
-            top : 
-                10px
-            bottom :
-                10px
-            right :
-                10px
-            left : 
-                10px
+        disableOnServe: False
+        scale : 0.85
+        format : A4
+        
         
     
         
