MAJ marges + entete

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,9 +60,8 @@ plugins :
         disableOnServe: False
         scale : 0.85
         format : A4
+        displayHeaderFooter: true
         
-        
-    
         
     
 theme:
