--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ mkdocs-macros-plugin>=0.6.0
 mkdocs-material>=7.2.4
 mkdocs-material-extensions>=1.0.1
 mkdocs-pandoc-plugin>=1.0.1
+mkdocs-page-pdf>=0.0.6
 mkdocs-pdf-export-plugin>=0.5.8
 mkdocs-section-index>=0.3.1
 mkdocs-video>=1.1.0
