--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: brospars/docker-mkdocs
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
