Ajout CSS 1ère + SNT + build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,10 @@ nav:
                 - 'Algorithmes, affectations et types de variables' : 'Maths/Seconde/AlgoBases/AffectationTypes.md'
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 'WorkInProgress.md'
-    - 'SNT' : 'WorkInProgress.md'
+    - 'SNT' : 
+        - 'Le Web' :
+            - 'HTML' : 'WorkInProgress.md'
+            - 'CSS' : 'SNT/Web/CSS.md'
     - 'NSI' :
         - 'Première' :
             - 'Bases de Python' : 
@@ -23,6 +26,11 @@ nav:
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
+            - 'Le web' :
+                - 'HTML strict' : 'WorkInProgress.md'
+                - 'CSS' : 'NSI/Premiere/C03/CSS.md'
+                - 'Javascript' : 'WorkInProgress.md'
+               
             
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
