--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
             - 'Le web' :
-                - 'HTML strict' : 'WorkInProgress.md'
+                - 'HTML strict' : 'NSI/Premiere/C03/HTML.md'
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
                 - 'Javascript' : 'WorkInProgress.md'
                
