--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
                 
             - 'Bases de Données et SQL' :
                 - 'Modèle relationnel' : 'NSI/Terminale/C04/ModeleRelationnel.md'
+                - 'Commandes SQL' : 'NSI/Terminale/C04/CommandesSQL.md'
            
     - 'Miscellanées' :
         - 'Python' :
