--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
                 - 'Intervalles' : 'Maths/Seconde/C01/C01_02_Intervalles.md'
             - 'Algorithmique et bases de Python' :
                 - 'Algorithmes, affectations et types de variables' : 'Maths/Seconde/AlgoBases/AffectationTypes.md'
+                - 'Programmation en Python et utilisation de Thonny' : 'Maths/Seconde/AlgoBases/ProgrammationPythonThonny.md'
         - 'Première' : 'WorkInProgress.md'
         - 'Terminale' : 'WorkInProgress.md'
     - 'SNT' : 
