--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
             - 'Le web' :
                 - 'HTML strict' : 'NSI/Premiere/C03/HTML.md'
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
-                - 'Javascript' : 'WorkInProgress.md'
+                - 'Introduction à Javascript' : 'NSI/Premiere/C03/JS01.md'
                
             
         - 'Terminale' : 
