--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
             - 'Bases de Données et SQL' :
                 - 'Modèle relationnel' : 'NSI/Terminale/C04/ModeleRelationnel.md'
                 - 'Bases de SQL 1' : 'NSI/Terminale/C04/BasesSQL1.md'
+                - 'Bases de SQL 2' : 'NSI/Terminale/C04/BasesSQL2.md'
            
     - 'Miscellanées' :
         - 'Python' :
