--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ nav:
             - 'Ensembles de nombres et intervalles' : 
                 - 'Ensembles de nombres ' : 'Maths/Seconde/C01/C01_01_Ensembles_Nombres.md'
                 - 'Intervalles' : 'Maths/Seconde/C01/C01_02_Intervalles.md'
+            - 'Notion de fonctions' : 
+                - 'Vocabulaire et rappels' : 'Maths/Seconde/C03/C03_01_Generalite_fonctions.md'
             - 'Algorithmique et bases de Python' :
                 - 'Algorithmes, affectations et types de variables' : 'Maths/Seconde/AlgoBases/AffectationTypes.md'
                 - 'Programmation en Python et utilisation de Thonny' : 'Maths/Seconde/AlgoBases/ProgrammationPythonThonny.md'
