--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
                 - 'Modèle relationnel' : 'NSI/Terminale/C04/ModeleRelationnel.md'
                 - 'Bases de SQL 1' : 'NSI/Terminale/C04/BasesSQL1.md'
                 - 'Bases de SQL 2' : 'NSI/Terminale/C04/BasesSQL2.md'
+                - 'Bases de SQL 3' : 'NSI/Terminale/C04/BasesSQL3.md'
            
     - 'Miscellanées' :
         - 'Python' :
