Ajout JS02 + build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
                 - 'HTML strict' : 'NSI/Premiere/C03/HTML.md'
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
                 - 'Introduction à Javascript' : 'NSI/Premiere/C03/JS01.md'
+                - 'Javascript, le DOM et les formulaires' : 'NSI/Premiere/C03/JS02.md'
                
             
         - 'Terminale' : 
