--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
                 - 'Bases de SQL 1' : 'NSI/Terminale/C04/BasesSQL1.md'
                 - 'Bases de SQL 2' : 'NSI/Terminale/C04/BasesSQL2.md'
                 - 'Bases de SQL 3' : 'NSI/Terminale/C04/BasesSQL3.md'
+                - 'Projet Pokemon' : 'NSI/Terminale/C04/Projet_Pokemon.md'
            
     - 'Miscellanées' :
         - 'Python' :
