--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ nav:
                 - 'Bases de SQL 2' : 'NSI/Terminale/C04/BasesSQL2.md'
                 - 'Bases de SQL 3' : 'NSI/Terminale/C04/BasesSQL3.md'
                 - 'Projet Pokemon' : 'NSI/Terminale/C04/Projet_Pokemon.md'
+                
+            - 'Arbres Binaires' :
+                - 'Définition et propriétés des arbres binaires' : 'NSI/Terminale/C05/Def_Arbres.md'
            
     - 'Miscellanées' :
         - 'Python' :
