Ajout 1NSI SIgnés/Flottants

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
+                - 'Entiers relatifs et flottants' : 'NSI/Premiere/C02/Entiers_relatifs_Flottants.md'
             - 'Le web' :
                 - 'HTML strict' : 'NSI/Premiere/C03/HTML.md'
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
