--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
                 
             - 'Arbres Binaires' :
                 - 'Définition et propriétés des arbres binaires' : 'NSI/Terminale/C05/Def_Arbres.md'
+                - 'Arbres Binaires de Recherche' : 'NSI/Terminale/C05/ABR.md'
            
     - 'Miscellanées' :
         - 'Python' :
