--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,10 +19,12 @@ nav:
     - 'SNT' : 
         - 'Le Web' :
             - 'HTML' : 'WorkInProgress.md'
-            - 'CSS' : 'SNT/Web/CSS.md' 
-            
+            - 'CSS' : 'SNT/Web/CSS.md'    
         - 'Données Structurées' :
             - 'Arborescence des fichiers et dossiers ' : 'SNT/Donnees/Arborescence.md'
+        - 'Reseaux Informatiques' :
+            - 'Adresses IP et TCP/IP' : 'SNT/Reseaux/TCP_IP.md'
+         
     - 'NSI' :
         - 'Première' :
             - 'Bases de Python' : 
