Add Tuples NSI 1ère

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,8 @@ nav:
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
                 - 'Introduction à Javascript' : 'NSI/Premiere/C03/JS01.md'
                 - 'Javascript, le DOM et les formulaires' : 'NSI/Premiere/C03/JS02.md'
-               
+            - 'Les séquences' :
+                - 'Tuples et algorithmes de parcours' : 'NSI/Premiere/C04/Tuples.md'
             
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
