--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ nav:
                 - 'Javascript, le DOM et les formulaires' : 'NSI/Premiere/C03/JS02.md'
             - 'Les séquences' :
                 - 'Tuples et algorithmes de parcours' : 'NSI/Premiere/C04/Tuples.md'
-                - 'Listes et compréhensions' : 'docs/NSI/Premiere/C04
+                - 'Listes et compréhensions' : 'NSI/Premiere/C04/Listes_Comprehension.md'
             
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
