--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
             - 'Les séquences' :
                 - 'Tuples et algorithmes de parcours' : 'NSI/Premiere/C04/Tuples.md'
                 - 'Listes et compréhensions' : 'NSI/Premiere/C04/Listes_Comprehension.md'
+                - 'Premiers algorithmes de tris' : 'NSI/Premiere/C04/Algorithmes_Tri.md'
             
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
