--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,9 @@ nav:
                 - 'Arbres Binaires de Recherche' : 'NSI/Terminale/C05/ABR.md'
                 - 'Implémentation des ABR' : 'NSI/Terminale/C05/ABR_Python.md'
                 - 'Equilibrage des ABR : les AVL' : 'NSI/Terminale/C05/AVL.md'
+                
+            - 'Processeurs et Ordonnancement' :
+                - 'Les SOCs' : 'NSI/Terminale/C06/Socs.md'
            
     - 'Miscellanées' :
         - 'Python' :
