--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
                 
             - 'Processeurs et Ordonnancement' :
                 - 'Les SOCs' : 'NSI/Terminale/C06/Socs.md'
+                - 'Gestion des Processus' : 'NSI/Terminale/C06/Processus.md'
            
     - 'Miscellanées' :
         - 'Python' :
