--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
             - 'Processeurs et Ordonnancement' :
                 - 'Les SOCs' : 'NSI/Terminale/C06/Socs.md'
                 - 'Gestion des Processus' : 'NSI/Terminale/C06/Processus.md'
+                - 'Ordonnancement et Interblocage' : 'NSI/Terminale/C06/Ordonnancement.md'
            
     - 'Miscellanées' :
         - 'Python' :
