--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
                 - 'Les SOCs' : 'NSI/Terminale/C06/Socs.md'
                 - 'Gestion des Processus' : 'NSI/Terminale/C06/Processus.md'
                 - 'Ordonnancement des processus' : 'NSI/Terminale/C06/Ordonnancement.md'
+                - 'Interblocage' : 'NSI/Terminale/C06/Interblocage.md'
            
     - 'Miscellanées' :
         - 'Python' :
