MAJ SNT Reseaux (DHCP/DNS)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
         - 'Reseaux Informatiques' :
             - 'Adresses IP et TCP/IP' : 'SNT/Reseaux/TCP_IP.md'
             - 'Création de réseaux' : 'SNT/Reseaux/Creation_reseaux.md'
+            - 'Pour aller plus loin, DHCP et DNS' : 'SNT/Reseaux/DHCP_DNS.md'
          
     - 'NSI' :
         - 'Première' :
