Add terminale NSI Routage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,10 @@ nav:
                 - 'Gestion des Processus' : 'NSI/Terminale/C06/Processus.md'
                 - 'Ordonnancement des processus' : 'NSI/Terminale/C06/Ordonnancement.md'
                 - 'Interblocage' : 'NSI/Terminale/C06/Interblocage.md'
+            
+            - 'Réseaux' :
+                - 'Protocoles de routages' : 'NSI/Terminale/C07/Routage.md'
+               
            
     - 'Miscellanées' :
         - 'Python' :
