--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,7 +90,8 @@ nav:
                 - 'Interblocage' : 'NSI/Terminale/C06/Interblocage.md'
             
             - 'Réseaux' :
-                - 'Protocoles de routages' : 'NSI/Terminale/C07/Routage.md'
+                - 'Notion de routage' : 'NSI/Terminale/C07/Routage.md'
+                - 'Protocoles RIP et OSPF' : 'NSI/Terminale/C07/RIP_OSPF.md'
                
            
     - 'Miscellanées' :
