Add Premiere Caractere

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
                 - 'Entiers relatifs et flottants' : 'NSI/Premiere/C02/Entiers_relatifs_Flottants.md'
+                - 'Codage des caractères' : 'NSI/Premiere/C02/CodageCaractere.md'
             - 'Le web' :
                 - 'HTML strict' : 'NSI/Premiere/C03/HTML.md'
                 - 'CSS' : 'NSI/Premiere/C03/CSS.md'
