--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,6 +109,7 @@ nav:
             - 'Pygame' : 
                 - 'Installation' : 'Miscellanees/Pygame/InstallationPygame.md'
                 - 'Bases de Pygame' : 'Miscellanees/Pygame/Base_pygame.md'
+            - 'P5 et Thonny' : 'Miscellanees/p5_Thonny.md'
         
 plugins : 
     - search
