--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ nav:
                 
             - 'Programmation dynamique' :
                 - 'Principes et exemples' : 'NSI/Terminale/C08/ProgDyn.md'
+                - 'Alignements de séquences' : 'NSI/Terminale/C08/alignSeq.md'
                 
                
            
@@ -109,7 +110,9 @@ nav:
             - 'Pygame' : 
                 - 'Installation' : 'Miscellanees/Pygame/InstallationPygame.md'
                 - 'Bases de Pygame' : 'Miscellanees/Pygame/Base_pygame.md'
-            - 'P5 et Thonny' : 'Miscellanees/p5_Thonny.md'
+            - 'P5' :
+                - 'P5 et Thonny' : 'Miscellanees/p5_Thonny.md'
+                - 'Bases de P5 ' : 'Miscellanees/utilisationP5.md'
         
 plugins : 
     - search
