MAJ Graphes maison

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,7 +179,17 @@ extra_css :
 markdown_extensions:
   - attr_list
   - pymdownx.highlight
-  - mkdocs_graphviz
+  - mkdocs_graphviz :
+        light_theme: 000000      # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        dark_theme: FFFFFF       # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        color: 789ABC            # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        bgcolor: none            # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        graph_color: 789ABC      # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        graph_fontcolor: 789ABC  # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        node_color: FF0000       # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        node_fontcolor: 0000FF   # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        edge_color: 00FF00       # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
+        edge_fontcolor: 789ABC   # Any HTML Color Name or any HTML Hexadecimal color code WITHOUT the `#` sign
   - pymdownx.caret
   - pymdownx.mark
   - pymdownx.tilde
