--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,7 @@ nav:
                 
             - 'Graphes et parcours' :
                 - 'Notion de Graphe' : 'NSI/Terminale/C09/graphe.md'
+                - 'Les graphes en Python' : 'NSI/Terminale/C09/graphe_python.md'
                 - 'Parcours de Graphes ' : 'NSI/Terminale/C09/parcours.md'
                 
                
