--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -203,7 +203,8 @@ markdown_extensions:
       generic: true
   - admonition
   - pymdownx.details
-  - pymdownx.tabbed
+  - pymdownx.tabbed :
+        alternate_style: true 
   - pymdownx.snippets
   - abbr
   - footnotes
