Ajout dico 1ère

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,8 @@ nav:
             - 'Architecture matérielle' :
                 - 'Historique' : 'NSI/Premiere/C05/Historique.md'
                 - 'Architecture' : 'NSI/Premiere/C05/Architecture.md' 
+            - 'Traitement des données en tables' :
+                - 'Les dictionnaires' : 'NSI/Premiere/C06/Dictionnaires.md'
                 
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
