--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,8 @@ nav:
                 - 'Architecture' : 'NSI/Premiere/C05/Architecture.md' 
             - 'Traitement des données en tables' :
                 - 'Les dictionnaires' : 'NSI/Premiere/C06/Dictionnaires.md'
+                - 'Les fichiers CSV' : 'NSI/Premiere/C06/CSV.md'
+                
                 
         - 'Terminale' : 
             - 'Présentation' : 'NSI/Terminale/home.md'
@@ -116,7 +118,8 @@ nav:
            
     - 'Miscellanées' :
         - 'Python' :
-            - 'Le langage' : 'WorkInProgress.md'
+            - 'Le langage' : 
+                - 'Manipulation des fichiers textes' : 'Miscellanees/Bases_Python/Fichiers_Textes.md'
             - 'Flask' : 'WorkInProgress.md'
             - 'MkDocs' : 'Miscellanees/mkdocs_cmd.md'
             - 'Manim' : 'Miscellanees/Manim/BasesManim.md'
