--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,8 @@ nav:
             - 'Traitement des données en tables' :
                 - 'Les dictionnaires' : 'NSI/Premiere/C06/Dictionnaires.md'
                 - 'Les fichiers CSV' : 'NSI/Premiere/C06/CSV.md'
+            - 'Les algorithmes gloutons' :
+                - 'Algorithmes Gloutons' : 'NSI/Premiere/C07/Algorithmes_Gloutons.md'
                 
                 
         - 'Terminale' : 
