--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: ZoneNSI
 site_url: https://www.zonensi.fr/
-site_author : Bug_Jack_Barron
+site_author : F. Vergniaud
 nav:
     - 'Home' : 'index.md'
     - 'Mathématiques' :
