MAJ Fonctionnel sans import

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,7 +157,7 @@ plugins :
     
 theme:
     name: material
-    custom_dir: overrides
+    custom_dir: my_theme_customizations/
     locale: fr
     logo  : assets/icons/house-fill.svg
     features:
@@ -186,12 +186,14 @@ extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://cdn.jsdelivr.net/gh/rod2ik/cdn@main/mkdocs/javascripts/mkdocs-graphviz.js
+  - xtra/javascripts/interpreter.js
 
 
 
  
 extra_css :
   - extra.css
+  - xtra/stylesheets/pyoditeur.css
 
   
 
