--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,10 +167,18 @@ theme:
         - toc.integrate
 
     palette :
-        scheme : slate
-        primary : blue grey
-        accent : amber
-        
+        - scheme : slate
+          toggle :
+            icon : material/brightness-4
+            name : Switch to light mode
+          primary : blue grey
+          accent : amber
+        - scheme : default
+          toggle :
+            icon : material/brightness-7
+            name : Switch to dark mode
+      
+            
 extra:
   social:
     - icon: fontawesome/solid/paper-plane
