--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,6 +177,8 @@ theme:
           toggle :
             icon : material/brightness-7
             name : Switch to dark mode
+          primary : blue grey
+          accent : amber
       
             
 extra:
