--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ nav:
     - 'NSI' :
         - 'Première' :
             - 'Bases de Python' : 
-                - 'Variables et affectations' : 'WorkInProgress.md'
+                - 'Variables et affectations' : 'NSI/Premiere/C01/Bases_Python_1.md'
                 - 'Boucles et conditions' : 'WorkInProgress.md'
                 - 'Fonctions, assertions et tests unitaires' : 'WorkInProgress.md'
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
