MAJ Première boucles et conditions (non terminé)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
         - 'Première' :
             - 'Bases de Python' : 
                 - 'Variables et affectations' : 'NSI/Premiere/C01/Bases_Python_1.md'
-                - 'Boucles et conditions' : 'WorkInProgress.md'
+                - 'Boucles et conditions' : 'NSI/Premiere/C01/C01_Conditions_Boucles.md'
                 - 'Fonctions, assertions et tests unitaires' : 'WorkInProgress.md'
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
             - 'Le codage des données' :
