MAJ première fonctions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,7 @@ nav:
             - 'Bases de Python' : 
                 - 'Variables et affectations' : 'NSI/Premiere/C01/Bases_Python_1.md'
                 - 'Boucles et conditions' : 'NSI/Premiere/C01/C01_Conditions_Boucles.md'
-                - 'Fonctions, assertions et tests unitaires' : 'WorkInProgress.md'
+                - 'Fonctions, assertions et tests unitaires' : 'NSI/Premiere/C01/Fonctions_Assertions.md'
                 - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
