--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,8 @@ nav:
                 - 'Variables et affectations' : 'NSI/Premiere/C01/Bases_Python_1.md'
                 - 'Boucles et conditions' : 'NSI/Premiere/C01/C01_Conditions_Boucles.md'
                 - 'Fonctions, assertions et tests unitaires' : 'NSI/Premiere/C01/Fonctions_Assertions.md'
-                - 'Projet : Jeu du Pendu' : 'NSI/Premiere/C01/ProjetPendu.md'
+                - 'Projet : Jeu du Pendu' : 'NSI/Premiere/Projets/Pendu/ProjetPendu.md'
+                - 'Projet : Bandit-Manchot' : 'NSI/Premiere/Projets/BanditManchot/Projet_Bandit_Manchot.md'
             - 'Le codage des données' :
                 - 'Binaire et codage des entiers' : 'NSI/Premiere/C02/BinaireCodageEntiers.md'
                 - 'Entiers relatifs et flottants' : 'NSI/Premiere/C02/Entiers_relatifs_Flottants.md'
