Ajout md demineur

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ nav:
                 - 'Premiers algorithmes de tris' : 'NSI/Premiere/C04/Algorithmes_Tri.md'
                 - 'Tableaux à 2 dimensions : Matrices ' : 'NSI/Premiere/C04/Tableaux2D.md'
                 - 'Les images Matricielles' : 'NSI/Premiere/C04/ImagesBMP.md'
+                - 'Projet : Démineur' : 'NSI/Premiere/Projets/demineurP5/projet_demineur.md'
             - 'Architecture matérielle' :
                 - 'Historique' : 'NSI/Premiere/C05/Historique.md'
                 - 'Architecture' : 'NSI/Premiere/C05/Architecture.md' 
