--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ nav:
                 - 'Parcours de Graphes ' : 'NSI/Terminale/C09/parcours.md'
                 
             - 'Recherche textuelles' : 'NSI/Terminale/C10/BoyerMoore.md'
+            - 'Sécurisation des communications' : 'NSI/Terminale/C11/Securisation.md'
                 
                
            
