--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,8 @@ theme:
         - navigation.sections
         - header.autohide
         - toc.integrate
+        - content.code.copy
+        - content.code.select
 
     palette :
         - scheme : slate
