--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,7 +132,9 @@ nav:
                 
             - 'Recherche textuelles' : 'NSI/Terminale/C10/BoyerMoore.md'
             - 'Sécurisation des communications' : 'NSI/Terminale/C11/Securisation.md'
-                
+    - 'Enseignement Scientifique' :
+        - 'Données et IA' :
+            - 'Stockage des données' : 'ES/stockage.md'
                
            
     - 'Miscellanées' :
