Ajout Apprivoiser python

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
             - 'Algorithmique et bases de Python' :
                 - 'Algorithmes, affectations et types de variables' : 'Maths/Seconde/AlgoBases/AffectationTypes.md'
                 - 'Programmation en Python et utilisation de Thonny' : 'Maths/Seconde/AlgoBases/ProgrammationPythonThonny.md'
+                - 'Apprivoiser Python' : 'Maths/Seconde/AlgoBases/ApprivoiserPython.md'
                 - 'Stuctures conditionnelles' : 'Maths/Seconde/AlgoBases/Structures_conditionnelles.md'
                 - 'Arithmétique'  : 'Maths/Seconde/AlgoBases/Arithmetique.md'
         - 'Première' : 'Maths/Premiere/home.md'
