Ajout correction sujet Metropole 2024 J1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -136,6 +136,9 @@ nav:
             - 'Calculabilité, Décidabilité' :
                 - 'Calculabilité' : 'NSI/Terminale/C12/calculabilite.md'
                 - 'Décidabilité' : 'NSI/Terminale/C12/Probleme_arret.md'
+            - 'Sujets de baccalauréat' :
+                - 'Épreuves Écrites' :
+                    - '2024 Métropole J1' : 'NSI/Terminale/Sujets/2024/Metropole/J1/corrige.md'
 
     - 'Enseignement Scientifique' :
         - 'Données et IA' :
