--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ nav:
                 - 'Modules, interfaces, encapsulation' : 'NSI/Terminale/C01/Modularite.md'
                 - 'Exceptions' : 'NSI/Terminale/C01/Exceptions.md'
                 - 'Introduction à la POO' : 'NSI/Terminale/C01/IntroPOO.md'
+                - 'Application : POO et KNN' : 'NSI/Terminale/C01/POO_KNN.md'
                 - 'Projet : ClickerWars' : 'NSI/Terminale/Projets/ClickersWars/CW.md'
             - 'Récursivité' :
                 - 'Notion de récursivité' : 'NSI/Terminale/C02/Recursivite.md'
