--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -211,7 +211,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/solid/paper-plane
-      link: mailto:fabien.vergniaud arobase ac-rennes.fr
+      link: mailto:fabien.vergniaud arobase/at ac-rennes.fr
       name: Écrire à l'auteur
     
   
