Ajout projet Flask Terminale

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,7 +99,8 @@ nav:
                 - 'Bases de SQL 1' : 'NSI/Terminale/C04/BasesSQL1.md'
                 - 'Bases de SQL 2' : 'NSI/Terminale/C04/BasesSQL2.md'
                 - 'Bases de SQL 3' : 'NSI/Terminale/C04/BasesSQL3.md'
-                - 'Projet Pokemon' : 'NSI/Terminale/C04/Projet_Pokemon.md'
+                - 'Projet Flask' : 'NSI/Terminale/C04/projet_Web_BDD.md'
+                #- 'Projet Pokemon' : 'NSI/Terminale/C04/Projet_Pokemon.md'
                 
             - 'Arbres Binaires' :
                 - 'Définition et propriétés des arbres binaires' : 'NSI/Terminale/C05/Def_Arbres.md'
